--- a/snippets/drawer-nav.liquid
+++ b/snippets/drawer-nav.liquid
@@ -15,9 +15,9 @@
     </form>
 
     <div class="mx-3">
-    {% render 'linklist-navlink', list: linklists.main-menu %}
+    {% render 'linklist-navlink', list: section.settings.main_menu %}
     <hr>
-    {% render 'linklist-navlink', list: linklists.secondary-menu %}
+    {% render 'linklist-navlink', list: section.settings.secondary_menu %}
     </div>
   </div>
 </div>
