--- a/snippets/drawer-colours.liquid
+++ b/snippets/drawer-colours.liquid
@@ -4,6 +4,6 @@
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="{{ 'layout.colour_filter.close_button' | t }}"></button>
   </div>
   <div class="offcanvas-body">
-    {% render 'linklist-colour-swatches', list: linklists.phone-colour-tags %}
+    {% render 'linklist-colour-swatches', list: settings.colour_menu %}
   </div>
 </div>
